--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Build firmware
         run: qmk compile -kb "${{ matrix.keyboard }}" -km "${{ matrix.keymap }}"
+        working-directory: qmk_firmware
 
       - name: Archive firmware
         uses: actions/upload-artifact@v3
